--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -899,12 +899,15 @@ a{
   line-height: 1.3;
 }
 
-.project-category {
+/* .project-category {
   color: var(--light-gray-70);
   font-size: var(--fs-6);
   font-weight: var(--fw-300);
-}
+} */
 
+.filter-select-box, .select-value{
+  display: none;
+}
 
 
 
